# knowyourcoinhistory

./: .coverage  .gitignore  LICENSE  Makefile  README.md  address.txt  docker-compose.regtest.yml  kycc.toml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BIP329.md  ELECTRUM_ADAPTER.md  FRONTEND.md  HEURISTICS.md  REGTEST_SETUP.md
kycc/: config.py  script_utils.py  server.py
kycc/adapters/: base.py  bitcoincore.py  electrum.py
kycc/fingerprint/: __init__.py  engine.py  heuristics.py  models.py
kycc/graph/: models.py  parser.py  serializer.py
kycc/labels/: bip329.py  migrator.py  store.py
kycc/routes/: address.py  export.py  health.py  labels.py  session.py  tx.py
tests/fixtures/: sample_tx_p2wpkh.json  sampletest.json
tests/integration/: conftest.py  test_rpc_adapter.py
tests/unit/: test_bip329.py  test_electrum_adapter.py  test_health.py  test_heuristics.py  test_label_store.py  test_parser.py  test_routes.py  test_session.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: RightPanel.tsx  SettingsModal.tsx  Toolbar.tsx
web/src/components/Graph/: EmptyState.tsx  FloatingSearch.tsx  GraphCanvas.tsx  TransactionNode.tsx  UTXONode.tsx
web/src/store/: graph.ts
web/src/types/: graph.ts
